--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,4 @@
-<p-menu class="menu-side-bar" [model]="items"></p-menu>
-<div class="container">
+<p-menu class="menu-side-bar" [model]="items" style="width: 14.6vw;"></p-menu>
   <div>
     <span class="p-input-icon-right">
       <div class="input">
@@ -8,4 +7,4 @@
       </div>
     </span>
   </div>
-</div>
+
