--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,7 +42,10 @@
 
 }
 
-
+.container[_ngcontent-bxv-c56] {
+  display: flex;
+  margin-left: 15vw;
+}
 ::ng-deep {
   .pi-chart-bar:before {
     content: "\e96d";
