--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<router-outlet></router-outlet>
 <!-- <p-table [value]="data">
   <ng-template pTemplate="header" >
       <tr>
