--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,8 @@
-<p-menu class="menu-side-bar" [model]="items" style="width: 14.6vw;"></p-menu>
-<div style="display:flex; justify-content: flex-end;">
+<p-menu class="menu-side-bar" [model]="items"></p-menu>
+<div>
+
+</div>
+<!-- <div style="display:flex; justify-content: flex-end;">
   <div class="p-col-12 p-md-6 p-lg-3 p-shadow-12" style="display: flex; justify-content:flex-start; align-items: center; height: 11vh; width: 86vw; padding-left: 2%;">
     <span class="p-input-icon-right p-col-12 p-md-6 p-lg-3 ">
       <div class="input">
@@ -9,4 +12,4 @@
     </span>
   </div>
 </div>
-
+ -->
