--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
 body{
   margin: 0;
   background-color: #fff;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
+html {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  }
