--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,17 +1,18 @@
 .body {}
 
-.pi-search:before {
-  background-color: rgb(21, 211, 201);
-  display: flex;
-  width: 35px;
-  height: 39.2px;
-  border-top-right-radius: 8%;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
+// .pi-search:before {
+//   background-color: rgb(21, 211, 201);
+//   display: flex;
+//   width: 35px;
+//   height: 39.2px;
+//   border-top-right-radius: 8%;
+//   justify-content: center;
+//   align-content: center;
+//   align-items: center;
+//   margin-left: 30vw;
 
 
-}
+// }
 
 .divtest {
 
@@ -23,12 +24,14 @@
 }
 
 .p-input-icon-right>i:last-of-type {
-  right: 0.5rem;
-  color: #6c757d;
-  display: flex;
-  justify-self: center;
-  align-self: flex-start;
+
+  color: rgb(21, 211, 201);
+  margin-left: 300px;
 }
+.imagem-perfil{
+  width:35px;
+}
+
 
 .divInputCor {
   background-color: rgb(248, 249, 252);
@@ -46,7 +49,179 @@
   display: flex;
   margin-left: 15vw;
 }
+.label-apostas{
+  width: 40%;
+  margin-left: 0%;
+  margin-top: 1%;
+  display: flex;
+  justify-content: center;
+  font-weight: 400; line-height: 1.2;
+  font-size: 30px;
+  color: #5a5c69!important;
+  font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
 ::ng-deep {
+
+  .p-datatable{
+    box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15)!important;
+
+
+  }
+  .div-apostas-realizadas{
+    display: flex;
+    padding-left: 1.5%;
+    border: 0.1px #dfdee3;
+    border-style: solid;
+    height: 8vh;
+    background-color: #ecebf0;
+    align-items: center;
+  }
+  .p-datatable .p-datatable-header{
+   padding: 0 !important;
+  }
+
+  .p-datatable table {
+    width: 95%!important;
+    margin-left: 2.6%;
+
+}
+  .p-input-icon-right > .p-inputtext {
+    padding-right: 2rem;
+    width: 50vh;
+}
+
+  .tableDiv{
+
+    margin-left: 16.5%;
+    margin-top: 2vh;
+    width: 82vw;
+
+  }
+
+  .p-card .p-card-body {
+    padding: 0;
+}
+.p-card .p-card-content {
+  padding: 0;
+}
+
+  .perfil{
+    display: flex;
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+  }
+  .nav-bar{
+    height: 10vh;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-shadow: 10px;
+    box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15)!important;
+
+  }
+
+  .nav-list{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    margin-left: 5%;
+
+  }
+
+  .header-container{
+    display: grid;
+  }
+
+  .p-header{
+    // display: flex;
+
+
+  }
+  .pi .pi-bell{
+
+  }
+
+  //Vai aplicar até o que estiver no máximo em 768px, ou seja, o que tem menos de 768px, o que tiver mais, não será aplicado.
+  @media (max-width: 1536px ) {
+    .p-inputtext {
+      margin-left: 40vh;
+      width: 17vw;
+      //width: 60vw;
+    }
+  }
+
+  @media (max-width: 1440px) {
+    .p-inputtext {
+      margin-left: 35vh;
+      width: 17vw;
+      //width: 60vw;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .p-inputtext {
+      margin-left: 30vh;
+      width: 20vw;
+      //width: 60vw;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .p-inputtext {
+      margin-left: 25vh;
+      width: 25vw;
+      //width: 60vw;
+
+  }
+  }
+  @media (max-width: 533px) {
+    .p-inputtext {
+      margin-left: 25vh;
+      width: 25vw;
+
+  }
+  }
+  @media (max-width: 499px) {
+    .p-inputtext {
+      margin-left: 25vh;
+      width: 25vw;
+
+  }
+  }
+
+  @media (max-width: 422px) {
+    .p-inputtext {
+      margin-left: 23vh;
+      width: 30vw;
+
+  }
+  }
+  @media (max-width: 330px) {
+    .p-inputtext {
+      margin-left: 23vh;
+      width: 40vw;
+
+  }
+  }
+  .p-inputtext {
+    background-color: rgb(248, 249, 252);
+    border: none;
+    //margin-left: 40vh;
+    margin-top:3%;
+    //width: 15vw;
+    height: 5vh;
+}
+
+  .p-card {
+    background-color: rgb(248, 249, 252);
+    box-shadow: none;
+  }
+
   .pi-chart-bar:before {
     content: "\e96d";
     color: white;
@@ -65,6 +240,10 @@
     padding: 0;
     list-style: none;
     width: 100% !important;
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+
   }
   .p-submenu-header{
     background-color: #15d3c9 !important;
@@ -87,20 +266,6 @@
 
   }
 
-//   .p-menu .p-submenu-header {
-//     margin: 0;
-//     padding: 0.75rem 1rem;
-//     color: White;
-//     background: #15d3c9;
-//     font-weight: 600;
-//     border-top-right-radius: 0;
-//     border-top-left-radius: 0;
-//   }
-
-//   .p-menu {
-//     background-color: #15d3c9;
-//     border: 0;
-//   }
 }
 
 .container {
