--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 body{
   margin: 0;
-  background-color: #fff;
+  background-color: #f8f9fc;
   width: 100%;
   height: 100%;
   position: relative;
